wait bash script to maintain service order
web service was not waiting for the postgres service to load before it starts, so added 5 sec wait to delay the web build

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
   web:
     build: .
-    command: python app/web/manage.py runserver 0.0.0.0:8000
+    command: ["bash", "wait-for-db.sh", "db:5432", "--", "python", "app/web/manage.py", "runserver" , "0.0.0.0:8000"]
     volumes:
       - .:/code
     ports:
